# Qt-DressUp-Game

./: CMakeLists.txt  LICENSE  MiracleDressGame  images.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  startscreenwidget.cpp  startscreenwidget.h  startscreenwidget.ui  stickerlabel.cpp  stickerlabel.h  高级语言程序设计实验报告.docx
